Add from and till query params to top n species api
